[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/gui/command_queue_list.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_flat_scalable.gd" type="Script" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="CommandQueueList" type="PanelContainer"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
style = 0
color_override = null
is_unique = false
content_margin_left_override = -1
content_margin_top_override = -1
content_margin_right_override = -1
content_margin_bottom_override = -1

[node name="InProgressCommands" type="VBoxContainer" parent="."]
light_mask = 0
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 2
custom_constants/separation = 4
__meta__ = {
"sc_separation": 4
}

[node name="Spacer" parent="." instance=ExtResource( 3 )]
light_mask = 0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 380.0
margin_right = 512.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 8 )
size = Vector2( 0, 8 )

[node name="QueuedCommands" type="VBoxContainer" parent="."]
light_mask = 0
margin_right = 1024.0
margin_bottom = 768.0
mouse_filter = 2
custom_constants/separation = 4
__meta__ = {
"sc_separation": 4
}
